# ai-tester

./: EXECUTION_SUMMARY.txt  GROQ_MIGRATION_REPORT.md  QUICK_REFERENCE.md  README.md  TRAINING_GUIDE.md  TRAINING_IMPLEMENTATION.md  pyproject.toml  test_truncation.py  validation_report.py  verify_training_setup.py
data/: checkpoint.json  checkpoint.jsonefk36an_.tmp  checkpoint.jsonm9qmcb2z.tmp  checkpoint.jsonqmre0jen.tmp
data/raw/: github_security_advisories.json
src/cve_synth/: __init__.py  checkpoint.py  cli.py  deepseek_client.py  extract.py  fetch_data.py  filtering.py  gemini_client.py  groq_client.py  ingest.py  models.py  pipeline.py  prompting.py  quality.py  rate_limit.py  train.py  writer.py
src/cve_synth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_pipeline_core.py
