[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cve-synth"
version = "0.1.0"
description = "Synthetic CVE-to-fine-tuning dataset pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
  {name = "Copilot"}
]
dependencies = []

[project.scripts]
build-dataset = "cve_synth.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
