[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cve-synth"
version = "0.1.0"
description = "Synthetic CVE-to-fine-tuning dataset pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
  {name = "Copilot"}
]
dependencies = []

[project.optional-dependencies]
train = [
    "unsloth[kaggle] @ git+https://github.com/unslothai/unsloth.git",
    "transformers>=4.40.0",
    "datasets>=2.16.0",
    "trl>=0.7.10",
    "torch>=2.1.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.24.0",
    "tensorboard>=2.14.0",
]

[project.scripts]
build-dataset = "cve_synth.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
